syntax = "proto3";

option csharp_namespace = "gRPC_UserService.Grpc";

package users;

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string name = 2;
  int32 age = 3;
  Gender gender = 4;
  string password = 5;
}

message RegisterResponse {
  bool success = 1;
  string userId = 2;
  string error = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string jwt = 2;
  string error = 3;
}

enum Gender
{
    Male = 0;
    Female = 1;
}